html, css adjustments

--- a/app/index.html
+++ b/app/index.html
@@ -7,15 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content=" Tiago Cardoso: UX, Visual, Product, UI, Senior, 'one title here' Designer">
     <meta name="author" content="Tiago Cardoso">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favic.ico">
 
     <title>Tiago Cardoso –––– Product Designer ––– Campinas - SP - Brazil</title>
 
     <!-- Bootstrap core CSS -->
     <link href="components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="components/font-awesome/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:900" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="styles/styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -27,24 +28,35 @@
   <body>
 
     <!-- Begin page content -->
-    <div class="container">
-      <div class="row">
-      <div class="col-lg-12"> 
-        <h1>My name is <span id="element"></span></h1>
-        <h2>I'm a Digital Product Designer.</h2>
-        <p class="p-ex">7+ years of experience - specialize in web design and applications for mobile devices.</p>
-        <p class="p-release">I really love working with digital products, thinking from the beginning solutions, solving real users problems.</p>
-        <p class="p-currently">Currently I'm working at Movile</p>
-      </div>
-         
-      </div>
-    </div>
+
+    <div class="bla">
 
 
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12"> 
+            <h1>Hi! I'm <span id="element"></span></h1>
+            <h2>Digital Product Designer.</h2>
+            <p class="p-exp">7+ years of experience working in digital projects.</p>
+            <p class="p-release">I love working with digital products, no firulas! no bullshit! I thinking from the beginning solutions, solving real users problems.</p>
+            <p class="p-currently">Currently I'm working at Movile</p>
+
+            <ul>
+              <li> <a href="#" target="_blank"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
+              <li><a href="#" target="_blank" class="padd"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+              <li><a href="#" target="_blank" class="padd"><i class="fa fa-medium" aria-hidden="true"></i></a></li>
+              <li><a href="#" target="_blank" class="padd"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+  </div>
 
     <!-- js -->
     <script src="components/jquery/dist/jquery.min.js"></script>
     <script src="components/typed.js/dist/typed.min.js"></script>
     <script src="scripts/main.js"></script>
+
   </body>
 </html>
