--- a/deploy/index.html
+++ b/deploy/index.html
@@ -31,7 +31,7 @@
               <div class="col-lg-12"> 
                 <h1 class="headline"><span id="element"></span></h1>
                 <h2>Digital Product Designer</h2>
-                <p class="p-exp">7+ years of experience working in digital projects.</p>
+                <p class="p-exp">10 years of experience working in digital projects.</p>
                 <p class="p-release">I love working with products, <strong>no firulas! no bullshit!</strong></p>
                 <p class="p-release-cont">I thinking from the beginning solutions, solving real users problems.</p>
                 <p class="p-currently">Currently I'm working at <a href="https://www.movile.com" target="_blank">Movile</a></p>
